# mediaconverter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
mediaconverter/: asgi.py  settings.py  urls.py  wsgi.py
task/: converter.py  models.py  path.py  serializers.py  tests.py  urls.py  views.py
task/management/commands/: converter.py
task/migrations/: 0001_initial.py
