[tool.poetry]
name = "mediaconverter"
version = "0.1.0"
description = ""
authors = ["Xie Yanbo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.14.0"
Django = "^4.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
